2022-03-23  Dirk Eddelbuettel  <edd@debian.org>

	* R/internals.R (getProtobufLibVersion): If formatted result, return
	as 'package_version()' rather than just string; update .Call()

2022-01-04  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Description, SystemRequirements): Updated to state that
	version 3.3.0 from March 2017 or later is now needed

2021-12-27  Dirk Eddelbuettel  <edd@debian.org>

	* README.md: Remove unused continuous integration artifact and badge

2021-12-15  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Release 0.4.18

	* man/*Rd: Update a number of URLs

2021-12-14  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version): Roll minor version and date

	* src/Makevars.ucrt: Applied patch by Tomas Kalibera that is part of
	his changes for the Windows utf8-enhabced ucrt3 builds of R 4.2.0

2021-10-10  Dirk Eddelbuettel  <edd@debian.org>

	* README.md: Update JSS article url to doi form per JSS request,
	switch to shorter https://doi.org/ base

2021-10-01  Dirk Eddelbuettel  <edd@debian.org>

 	* .github/workflows/docker.yaml (on): Restrict Docker rebuilds to
	pushes to master branch

2021-09-26  Dirk Eddelbuettel  <edd@debian.org>

	* .github/workflows/docker.yaml: Add action to build and push
	containers with cron set to monthly schedule

2021-06-27  Jeroen Ooms  <jeroen@berkeley.edu>

	* src/Makevars.win: Support UCRT build
	* src/Makevars.ucrt: Idem

2021-06-11  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll minor version

	* .editorconfig: Added

2021-06-10  Vitalie Spinu <spinuvit@gmail.com>

	* R/debug_string.R: Support extra toJSON format arguments
	* R/00classes.R: Idem
	* src/wrapper_Message.cpp: Idem
	* src/init.c: Idem
	* man/Message-class.Rd: Document new parameters

2021-06-01  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (URL): Add package page to URL field

2021-01-09  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version): Roll minor version and date
